--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,10 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-input[type='number'],
-input[type='email'],
-input[type='password'],
-input[type='text'],
+input[type="number"],
+input[type="email"],
+input[type="password"],
+input[type="text"],
 textarea {
   @apply my-1 w-full rounded-2xl border  border-gray-400 px-3 py-2;
 }
@@ -15,16 +15,16 @@ button.primary {
 }
 
 .mont {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 .raleway {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 .khula {
-  font-family: 'Khula', sans-serif;
+  font-family: "Khula", sans-serif;
 }
 
 .poppings {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
